--- a/app/src/main/res/layout/gallery_item_start_demo.xml
+++ b/app/src/main/res/layout/gallery_item_start_demo.xml
@@ -13,7 +13,8 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:layout_marginLeft="0dp">
 
             <ImageView
                 android:id="@+id/iv_play_avatar"
@@ -24,7 +25,7 @@
                 android:layout_marginTop="8dp"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/ic_launcher" />
+                app:srcCompat="@drawable/lo" />
 
             <TextView
                 android:id="@+id/tv_play_name"
@@ -76,59 +77,56 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/tv_play_location" />
 
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="368dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="29dp"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title_play"
-                tools:layout_editor_absoluteX="8dp"
-                android:id="@+id/rv_play_cardview" />
-
             <TextView
                 android:id="@+id/tv_time_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="8dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginEnd="7dp"
+                android:layout_marginRight="7dp"
                 android:text="2д, 7ч, 30м"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_play_cardview" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
-            <CheckBox
+            <TextView
                 android:id="@+id/checkBox_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
-                android:layout_marginTop="5dp"
-                android:text="517"
+                android:layout_marginStart="8dp"
+                android:text="6/10 учавствуют"
                 android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rv_play_cardview" />
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <TextView
                 android:id="@+id/tv_hashtag_play"
                 android:layout_width="334dp"
                 android:layout_height="17dp"
-                android:layout_marginTop="40dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:text="хэш тэги"
-                app:layout_constraintTop_toBottomOf="@+id/rv_play_cardview"
                 app:layout_constraintLeft_toRightOf="@+id/imageView"
-                android:layout_marginLeft="8dp" />
+                android:layout_marginTop="25dp"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <ImageView
                 android:id="@+id/iv_clock_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginTop="11dp"
                 app:layout_constraintRight_toLeftOf="@+id/tv_time_play"
-                app:layout_constraintTop_toBottomOf="@+id/rv_play_cardview"
-                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
+                app:srcCompat="@android:drawable/ic_lock_idle_alarm"
+                android:layout_marginTop="8dp"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <ImageButton
                 android:id="@+id/ib_meny_play_cardview"
                 android:layout_width="35dp"
                 android:layout_height="28dp"
+                android:layout_marginEnd="3dp"
                 android:layout_marginRight="3dp"
                 android:layout_marginTop="4dp"
                 android:background="@color/cardview_light_background"
@@ -140,19 +138,18 @@
                 android:id="@+id/tv_data_play_cardview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginTop="33dp"
                 android:text="12.10.2017"
                 android:textSize="12sp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="33dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/iv_bonus_play_cardview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="0dp"
-                android:layout_marginTop="0dp"
                 app:layout_constraintRight_toLeftOf="@+id/ib_meny_play_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -161,11 +158,66 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/hashtag"
-                android:layout_marginTop="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/checkBox_play"
                 android:layout_marginLeft="12dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="0dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox_play"
+                app:srcCompat="@drawable/hashtag" />
+
+            <GridLayout
+                android:layout_width="344dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:columnCount="3"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title_play"
+                tools:layout_editor_absoluteX="8dp"
+                android:id="@+id/gridLayout">
+
+                <ImageView
+                    android:id="@+id/imageView16"
+                    android:layout_width="115dp"
+                    android:layout_height="115dp"
+                    android:layout_margin="2dp"
+                    app:srcCompat="@drawable/dd" />
+
+                <ImageView
+                    android:id="@+id/imageView15"
+                    android:layout_width="115dp"
+                    android:layout_height="115dp"
+                    android:layout_margin="2dp"
+                    app:srcCompat="@drawable/ff" />
+
+                <ImageView
+                    android:id="@+id/imageView14"
+                    android:layout_width="115dp"
+                    android:layout_height="115dp"
+                    android:layout_margin="2dp"
+                    app:srcCompat="@drawable/t" />
+
+                <ImageView
+                    android:id="@+id/imageView13"
+                    android:layout_width="115dp"
+                    android:layout_height="115dp"
+                    android:layout_margin="2dp"
+                    app:srcCompat="@drawable/s" />
+
+                <ImageView
+                    android:id="@+id/imageView8"
+                    android:layout_width="115dp"
+                    android:layout_height="115dp"
+                    android:layout_margin="2dp"
+                    app:srcCompat="@drawable/f" />
+
+                <ImageView
+                    android:id="@+id/imageView6"
+                    android:layout_width="115dp"
+                    android:layout_height="115dp"
+                    android:layout_margin="2dp"
+                    app:srcCompat="@android:drawable/ic_input_add" />
+            </GridLayout>
+
 
         </android.support.constraint.ConstraintLayout>
 
