--- a/app/src/main/res/layout/tab3top.xml
+++ b/app/src/main/res/layout/tab3top.xml
@@ -14,4 +14,15 @@
         android:layout_height="wrap_content"
         android:text="tab3text"/>
 
+    <Button
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/section_label"
+        android:layout_marginTop="117dp"
+        android:layout_toEndOf="@+id/section_label"
+        android:layout_toRightOf="@+id/section_label"
+        android:onClick="buttlisten"
+        android:text="Button" />
+
 </RelativeLayout>
