--- a/app/src/main/res/layout/gallery_item_play_demo.xml
+++ b/app/src/main/res/layout/gallery_item_play_demo.xml
@@ -3,8 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content"
+    android:fadeScrollbars="false"
+    android:isScrollContainer="true"
+    android:orientation="horizontal"
+    android:scrollbars="vertical">
 
     <android.support.v7.widget.CardView
         android:id="@+id/cv_play"
@@ -81,10 +84,11 @@
                 android:id="@+id/tv_time_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="3dp"
                 android:layout_marginRight="3dp"
+                android:layout_marginTop="15dp"
                 android:text="2д, 7ч, 30м"
                 app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <CheckBox
@@ -92,36 +96,40 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="517"
                 android:textSize="12sp"
                 app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="8dp"
                 app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <TextView
                 android:id="@+id/tv_hashtag_play"
                 android:layout_width="334dp"
                 android:layout_height="17dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="43dp"
                 android:text="хэш тэги"
                 app:layout_constraintLeft_toRightOf="@+id/imageView"
-                android:layout_marginLeft="8dp"
-                android:layout_marginTop="43dp"
                 app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <ImageView
                 android:id="@+id/iv_clock_play"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
                 android:layout_marginRight="8dp"
-                app:layout_constraintRight_toLeftOf="@+id/tv_time_play"
-                app:srcCompat="@android:drawable/ic_lock_idle_alarm"
                 android:layout_marginTop="15dp"
-                app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
+                app:layout_constraintRight_toLeftOf="@+id/tv_time_play"
+                app:layout_constraintTop_toBottomOf="@+id/gridLayout"
+                app:srcCompat="@android:drawable/ic_lock_idle_alarm" />
 
             <ImageButton
                 android:id="@+id/ib_meny_play_cardview"
                 android:layout_width="35dp"
                 android:layout_height="28dp"
+                android:layout_marginEnd="3dp"
                 android:layout_marginRight="3dp"
                 android:layout_marginTop="4dp"
                 android:background="@color/cardview_light_background"
@@ -133,19 +141,18 @@
                 android:id="@+id/tv_data_play_cardview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginEnd="15dp"
                 android:layout_marginRight="15dp"
+                android:layout_marginTop="33dp"
                 android:text="12.10.2017"
                 android:textSize="12sp"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:layout_marginTop="33dp" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/iv_bonus_play_cardview"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginRight="0dp"
-                android:layout_marginTop="0dp"
                 app:layout_constraintRight_toLeftOf="@+id/ib_meny_play_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/btn_star_big_on" />
@@ -154,21 +161,21 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/hashtag"
-                android:layout_marginTop="0dp"
-                app:layout_constraintTop_toBottomOf="@+id/checkBox_play"
                 android:layout_marginLeft="12dp"
-                app:layout_constraintLeft_toLeftOf="parent" />
+                android:layout_marginStart="12dp"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/checkBox_play"
+                app:srcCompat="@drawable/hashtag" />
 
             <GridLayout
+                android:id="@+id/gridLayout"
                 android:layout_width="344dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginTop="8dp"
                 android:columnCount="3"
-                app:layout_constraintTop_toBottomOf="@+id/tv_title_play"
-                tools:layout_editor_absoluteX="8dp"
-                android:id="@+id/gridLayout">
+                app:layout_constraintTop_toBottomOf="@+id/tvopis"
+                tools:layout_editor_absoluteX="20dp">
 
                 <ImageView
                     android:id="@+id/imageView16"
@@ -212,6 +219,29 @@
                     android:layout_margin="2dp"
                     app:srcCompat="@drawable/dd" />
             </GridLayout>
+
+            <TextView
+                android:id="@+id/tvDescr"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="Подробнее"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_title_play" />
+
+            <TextView
+                android:id="@+id/tvopis"
+                android:layout_width="368dp"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="0dp"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
+                android:visibility="gone"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvDescr" />
 
         </android.support.constraint.ConstraintLayout>
 
