--- a/app/src/main/res/layout/gallery_item_start_demo.xml
+++ b/app/src/main/res/layout/gallery_item_start_demo.xml
@@ -211,7 +211,7 @@
                     app:srcCompat="@drawable/f" />
 
                 <ImageView
-                    android:id="@+id/imageView6"
+                    android:id="@+id/iv6"
                     android:layout_width="115dp"
                     android:layout_height="115dp"
                     android:layout_margin="2dp"
