--- a/app/src/main/res/layout/gallery_item_play_demo.xml
+++ b/app/src/main/res/layout/gallery_item_play_demo.xml
@@ -111,7 +111,7 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="43dp"
                 android:text="хэш тэги"
-                app:layout_constraintLeft_toRightOf="@+id/imageView"
+                app:layout_constraintLeft_toRightOf="@+id/ivHashTag"
                 app:layout_constraintTop_toBottomOf="@+id/gridLayout" />
 
             <ImageView
@@ -158,7 +158,7 @@
                 app:srcCompat="@android:drawable/btn_star_big_on" />
 
             <ImageView
-                android:id="@+id/imageView"
+                android:id="@+id/ivHashTag"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="12dp"
